Bug#11493 - Alter table rename to default database does not work without db name qualifying Supplied the default database name for ALTER TABLE ... RENAME for the new table instead of the old tables db like we do for other ALTERs.

mysql-test/r/alter_table.result:
  Bug#11493 - Alter table rename to default database does not work without db name qualifying
  The test result.
mysql-test/t/alter_table.test:
  Bug#11493 - Alter table rename to default database does not work without db name qualifying
  The test case.